project/test/semantics/unit/bad/Bad30_shouldCheckExpressionTypeOfFunctionalIfs.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        goodFunction: () -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
        
        badAction: (arg1: Bool, arg2: Int, arg3: Int) -> Bool = {
            if (3 > 2) then {
                arg3
            } elif (4 > 2) then {
                arg2
            } elif (5 > 2) then {
                arg3
            } else {
                arg3
            } // UnexpectedReturnTypeError: Int instead of Bool
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
